Update settings to include node_modules in file visibility

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "**/*tsconfig.json": true,
         ".cache": true,
         "retool.config.json": true,
-        "**/node_modules": false
+        "**/node_modules": true
     },
     "window.title": "e:\\In-Accord-web",
     "workbench.colorCustomizations": {
