--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "cross-env NODE_NO_WARNINGS=1 ts-node --esm prisma/seed.ts",
+    "seed": "ts-node prisma/seed.ts",
     "build": "rimraf dist && npx tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
@@ -24,7 +24,7 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
     "prisma": "^5.22.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.1.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
