--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^8.23.0",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
