--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20.19.27",
     "@types/numeral": "^2.0.5",
@@ -35,11 +36,14 @@
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.23",
     "babel-plugin-react-compiler": "1.0.0",
-    "eslint": "^9",
+    "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^17.0.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "tw-colors": "^3.3.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^8.52.0"
   }
 }
