--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
     "redux-persist": "^6.0.0",
+    "tauri": "^0.15.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20.19.27",
+    "@types/node": "^25.0.3",
     "@types/numeral": "^2.0.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
