--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint",
-    "tauri": "tauri"
+    "lint": "eslint"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
