--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,10 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
     "prisma": "^5.22.0",
-    "rimraf": "^6.1.2"
+    "rimraf": "^6.1.2",
+    "nodemailer": "^6.9.3"
   },
+  
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
