--- a/server/package.json
+++ b/server/package.json
@@ -23,16 +23,16 @@
     "express": "^4.22.1",
     "helmet": "^7.1.0",
     "morgan": "^1.10.1",
+    "nodemailer": "^6.9.3",
     "prisma": "^5.22.0",
-    "rimraf": "^6.1.2",
-    "nodemailer": "^6.9.3"
+    "rimraf": "^6.1.2"
   },
-  
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.14.10",
+    "@types/nodemailer": "^7.0.4",
     "cross-env": "^10.1.0",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
