Refactor: Enhance development scripts and add functionality to manage dev server locks and free ports

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "dev:unlock": "node scripts/clear-dev-lock.cjs"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
