--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "build": "rimraf dist && npx tsc",
     "start": "npm run build && node dist/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
-    "prisma": "prisma"
+    "prisma": "prisma",
+    "dev:port": "node scripts/free-port-8000.cjs",
+    "dev:freeport": "node scripts/free-port-8000.cjs --kill"
   },
   "keywords": [],
   "author": "",
