--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
