--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-dom": "19.2.3",
     "recharts": "^3.6.0",
     "redux-persist": "^6.0.0",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
