--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "dev:unlock": "node scripts/clear-dev-lock.cjs"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.6",
@@ -18,6 +19,8 @@
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@uiw/codemirror-theme-dracula": "^4.25.4",
+    "@uiw/react-codemirror": "^4.25.4",
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
