--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "seed": "ts-node prisma/seed.ts",
     "migrate:seed-users": "ts-node scripts/migrate-seed-users.ts",
     "build": "rimraf dist && npx tsc",
-    "start": "npm run build && node dist/index.js",
+    "start": "npm run build && node dist/src/index.js",
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
     "prisma": "prisma",
     "dev:port": "node scripts/free-port-8000.cjs",
