--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "numeral": "^2.0.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-is": "^19.2.3",
     "recharts": "^3.6.0",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.3",
