--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,11 @@
     "dev": "npm run build && concurrently \"npx tsc -w\" \"nodemon --exec ts-node src/index.ts\"",
     "prisma": "prisma",
     "dev:port": "node scripts/free-port-8000.cjs",
-    "dev:freeport": "node scripts/free-port-8000.cjs --kill"
+    "dev:freeport": "node scripts/free-port-8000.cjs --kill",
+    "pm2:start": "npm run build && pm2 start dist/src/index.js --name inaccord-backend",
+    "pm2:stop": "pm2 stop inaccord-backend",
+    "pm2:restart": "pm2 restart inaccord-backend",
+    "pm2:delete": "pm2 delete inaccord-backend"
   },
   "keywords": [],
   "author": "",
