--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,12 +30,14 @@
   },
   "include": [
     "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    ".next/dev/types/**/*.ts"
+    "server/src/**/*",
+    "server/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "client",
+    "dist",
+    "prisma/seed.ts",
+    ".next"
   ]
 }
