--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,14 +30,12 @@
   },
   "include": [
     "next-env.d.ts",
-    "server/src/**/*",
-    "server/**/*.ts"
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules",
-    "client",
-    "dist",
-    "prisma/seed.ts",
-    ".next"
+    "node_modules"
   ]
 }
